--- a/plugins/advertising/admob/getting_started.html
+++ b/plugins/advertising/admob/getting_started.html
@@ -201,7 +201,7 @@
                             <a class="nav-link disabled">Object Definitions</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link inactive" href="product_details.html">
+                            <a class="nav-link inactive" href="consent_preferences.html">
                                 Consent Preferences
                             </a>
                         </li>
