--- a/plugins/advertising/admob/contact.html
+++ b/plugins/advertising/admob/contact.html
@@ -229,13 +229,54 @@
                 <div class="container border-bottom" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
                     <h1 class="h2 text-white-shadow">Contact</h1>
                 </div>
-                <div class="container" style="margin-left: 0px; padding-left: 0px;">
-                    <div class="info">
-                        <p class="content" style="margin-bottom: 0rem;">
-                            You can get support by emailing us at "porretgaming@gmail.com". </br></br>
-                            Get in touch with our community on our <a href="https://discord.gg/GgtddXNYRN">Discord Server</a>.</br>
-                            Twitter: <a href="https://twitter.com/PorretGaming">@PorretGaming</a>
-                        </p>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="https://discord.gg/GgtddXNYRN" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom discord-color" style="box-shadow: 0 0 15px rgb(114,137,218);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">Discord</h4>
+                                    </div>
+                                    <img src="../../../images/general/Discord.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            https://discord.gg/GgtddXNYRN
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="mailto: porretgaming@gmail.com" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom gmail-color" style="box-shadow: 0 0 15px rgb(255, 78, 78);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">Email</h4>
+                                    </div>
+                                    <img src="../../../images/general/Gmail.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            porretgaming@gmail.com
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4 col-12 mb-5">
+                            <a href="https://twitter.com/PorretGaming" target="_blank" class="text-decoration-none">
+                                <div class="card text-center card-custom twitter-color" style="box-shadow: 0 0 15px rgb(46, 46, 46);">
+                                    <div class="card-header card-header-custom text-white-shadow">
+                                        <h4 style="margin-bottom: 0;">X (Twitter)</h4>
+                                    </div>
+                                    <img src="../../../images/general/Twitter.png" class="mx-auto d-block" style="width: 50%" alt="...">
+                                    <div class="card-body card-body-custom">
+                                        <p class="card-text" style="color: rgb(208, 209, 211); font-size: 16px; font-weight: 10; letter-spacing: 1px;">
+                                            https://twitter.com/PorretGaming
+                                        </p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
                                 
