add all menu items to get to docs and news item

--- a/Squiggle.html
+++ b/Squiggle.html
@@ -139,6 +139,18 @@
                   </div>
               </a>
             </li>
+            <li>
+                <a class="dropdown-item" href="plugins/advertising/admob/overview.html">
+                    <div class="dropdown-item-content">
+                        <img src="./images/Admob/Admob_Plugin_Logo.png" alt="Advertising"
+                            class="dropdown-item-image">
+                        <div class="dropdown-item-text">
+                            Admob Ads
+                            <span class="dropdown-item-subtext">Android Plugin</span>
+                        </div>
+                    </div>
+                </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
