--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
                   </div>
               </a>
             </li>
+            <li>
+                <a class="dropdown-item" href="plugins/advertising/admob/overview.html">
+                    <div class="dropdown-item-content">
+                        <img src="./images/Admob/Admob_Plugin_Logo.png" alt="Advertising"
+                            class="dropdown-item-image">
+                        <div class="dropdown-item-text">
+                            Admob Ads
+                            <span class="dropdown-item-subtext">Android Plugin</span>
+                        </div>
+                    </div>
+                </a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
@@ -163,28 +175,27 @@
       <h1 class="section-header" style="color:rgb(134, 207, 255)" >UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
-          <a href="./plugins/google-play-services/in-app-updates/overview.html" class="text-decoration-none">
-            <div class="card text-center card-custom rose">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
-              <div class="card-header card-header-custom">
-                <h5 style="margin-bottom: 0;">Play Services: Updates</h5>
+            <a href="./plugins/advertising/admob/overview.html" class="text-decoration-none">
+              <div class="card text-center card-custom lava">
+                <img class="new-tag" alt='New!' src='images/NewTag.png' />
+                <div class="card-header card-header-custom">
+                  <h5 style="margin-bottom: 0;">Advanced Admob Ads</h5>
+                </div>
+                <img src="images/Admob/Admob_Feature_Image.png" alt="...">
+                <div class="card-body card-body-custom">
+                  <p class="card-text">
+                    Unreal Engine blueprint node exposing the Admob Advetising API to Android Game Developers.
+                  </p>
+                  <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5' class="btn btn-custom" target="_blank">
+                    <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                  </a> -->
+                </div>
               </div>
-              <img src="images/InAppUpdates/GooglePlay_InAppUpdates_Feature.png" alt="...">
-              <div class="card-body card-body-custom">
-                <p class="card-text">
-                  Unreal Engine blueprint node exposing the Play Services Core In App Updates API to Android Game Developers.
-                </p>
-                <a href='https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5' class="btn btn-custom" target="_blank">
-                  <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
-                </a>
-              </div>
-            </div>
-          </a>
+            </a>
         </div>
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/google-play-services/in-app-reviews/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom sunflower">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Play Services: Reviews</h5>
               </div>
@@ -201,9 +212,26 @@
           </a>
         </div>
         <div class="col-md-4 col-12 mb-5">
+            <a href="./plugins/google-play-services/in-app-updates/overview.html" class="text-decoration-none">
+              <div class="card text-center card-custom rose">
+                <div class="card-header card-header-custom">
+                  <h5 style="margin-bottom: 0;">Play Services: Updates</h5>
+                </div>
+                <img src="images/InAppUpdates/GooglePlay_InAppUpdates_Feature.png" alt="...">
+                <div class="card-body card-body-custom">
+                  <p class="card-text">
+                    Unreal Engine blueprint node exposing the Play Services Core In App Updates API to Android Game Developers.
+                  </p>
+                  <a href='https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5' class="btn btn-custom" target="_blank">
+                    <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
+                  </a>
+                </div>
+              </div>
+            </a>
+          </div>
+        <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/sensors/overview.html" class="text-decoration-none">
             <div class="card text-center card-custom lavender">
-              <img class="new-tag" alt='New!' src='images/NewTag.png' />
               <div class="card-header card-header-custom">
                 <h5 style="margin-bottom: 0;">Android Sensors</h5>
               </div>
