--- a/plugins/advertising/admob/overview.html
+++ b/plugins/advertising/admob/overview.html
@@ -132,6 +132,18 @@
                                 </div>
                             </a>
                         </li>
+                        <li>
+                            <a class="dropdown-item" href="../../advertising/admob/overview.html">
+                                <div class="dropdown-item-content">
+                                    <img src="../../../images/Admob/Admob_Plugin_Logo.png" alt="Advertising"
+                                        class="dropdown-item-image">
+                                    <div class="dropdown-item-text">
+                                        Admob Ads
+                                        <span class="dropdown-item-subtext">Android Plugin</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -232,6 +244,14 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
+                        <p class="content">
+                            We have exposed our documentation early in order to get feedback and improve our plugin before release.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            If you are interested in this plugin, we would love to know what you think, so please, let us know!
+                        </p>
+                    </div>
+                    <div class="info" style="margin-top: 20px">
                         <p class="content">
                             <b>Advanced Admob Ads</b>
                         </p>
