small spelling mistake

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <img src="images/Admob/Admob_Feature_Image.png" alt="...">
                 <div class="card-body card-body-custom">
                   <p class="card-text">
-                    Unreal Engine blueprint node exposing the Admob Advetising API to Android Game Developers.
+                    Unreal Engine blueprint node exposing the Admob Advertising API to Android Game Developers.
                   </p>
                   <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/6cdcb80be3464f2b928415eab453b6d5' class="btn btn-custom" target="_blank">
                     <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
